css/style.css
body {
    background-color: #000000;
    overflow-x: hidden;
    font-family: 'Inter', sans-serif;
    color: white;
    padding: 10px 10px 10px 10px;
}

.additional {
    position: absolute;
    border-top: 1px solid rgb(46, 46, 46); 
    padding: 10px; 
    left: 70px;
    display: flex; 
    flex-wrap: wrap; 
    padding: 10px; 
    padding-right: 10px;
    width: 350px;
    background: #0000009c;
}

.additional p {
    color: rgb(66, 66, 66);
    font-size: 12px;
    text-align: center;
    margin: 0;
    padding: 20px;
}

.additional h1 {
    text-align: center;
    margin: 0;
    font-size: 28px;
}

.cs {
    display: inline-block; 
    border: 1px solid rgb(118, 189, 255); 
    border-radius: 999px; 
    color: rgb(118, 189, 255);
    padding: 4px 12px;
    background: rgba(0, 26, 255, 0.137);
}

.subbar {
    position: absolute;
    display: flex;
    right: 0; 
    text-decoration: none; 
    top: 20px;
    width: 300px;
    justify-content: space-evenly;
}

.content {
    margin-left: 20px;
    padding: 20px 20px 20px 20px;
    flex-grow: 1;
    color: white;
}

.content a {
    text-decoration: none;
    color: white;
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 8px;
    padding: 7px 20px;
    display: inline-block;
    background: black;
    transition: background 0.1s ease;
}

.content a:hover {
    background: #1f1f1f;
}

.coming-soon-project {
    color: rgba(255, 255, 255, 0.5);
    border: 1px dashed rgba(112, 112, 112, 0.466);
    height: auto;
    width: 200px;
    border-radius: 10px;
    background: rgba(20, 20, 20, 0.459);
}

.coming-soon-project h4 {
    padding-left: 15px;
    margin-bottom: 10px;
}

.coming-soon-project p {
    padding-left: 15px;
    text-align: center;
    width: 180px;
}

.projects-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
}

.project {
    text-decoration: none;
    color: white;
    border: 1px solid rgba(112, 112, 112, 0.267);
    height: auto;
    width: 360px;
    border-radius: 10px;
    background: rgb(20, 20, 20);
    padding: 10px 10px 10px 10px; 
    transition: width 0.5s ease, height 0.5s ease, background 0.1s ease-out;
}

.project .skills {
    padding: 0 15px;
    margin-top: auto;
    margin-bottom: 15px;
}

.project .skills p {
    margin: 0;
    width: auto;
    font-size: 10px;
}

.project p {
    padding-left: 15px;
    text-align: left;
    width: 350px;
    color: rgb(170, 170, 170);
    font-size: 13px;
}

.project h4 {
    padding-left: 15px;
    margin-bottom: 10px;
}

.project:hover {
    height: auto;
    border-color: #185FA5;
}

.disclaimer {
    color: #b8b8b886;
    padding-top: 10px;
    padding-left: 5px;
    padding-bottom: 15px;
    text-align: left;
    border-top: 0.5px solid rgba(255, 255, 255, 0.1);
    font-size: 13px;
}

.stars {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    min-height: 85vh;
    z-index: -1;
}

.stars::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 2px;
    height: 2px;
    animation: twinkle 5s ease-in-out infinite alternate;
}

.sun {
    position: absolute;
    top: 0;
    right: 300px;
    width: 100px; 
    height: 100px; 
    border-radius:50%; 
    background: rgb(255, 255, 255);
}

.orbit {
    position: absolute;
    border-radius: 50%;
    background: #65b2ff;
    width: 30px;
    height: 30px;
    right: 70px;
    top: 130px;
}

.ellipse {
    position: absolute;
    border: 1px solid #b3b3b362;
    border-radius: 50%;
    top: -200px;
    left: -100px;
    rotate: 80deg;
    width: 200px; 
    height: 500px; 
    pointer-events: none;
}

.bigellipse {
    position: absolute;
    border: 1px solid #b3b3b380;
    border-radius: 50%;
    top: -400px;
    left: -300px;
    rotate: 80deg;
    width: 400px; 
    height: 1000px; 
    pointer-events: none;
}

@keyframes twinkle {
    from { opacity: 1;}
    to { opacity: 0.3; }
}

.about-me {
    display: flex;
    gap: 32px;
    align-items: flex-start;
    padding: 48px 40px;
    width: 99%;
    border-top: 1px solid rgba(141, 141, 141, 0.5);
    border-bottom: 1px solid rgba(141, 141, 141, 0.5);
}

.avatar{
    width: 64px;
    height: 64px;
    border: 1px solid #65b2ff;
    border-radius: 50%;
    background: #00aeff1e;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 22px;
    font-weight: 500;
    color: #65b2ff;
    flex-shrink: 0;
}

.description {
    display: flex;
    flex-direction: column;
}
.description p {
    padding-right: 20px;
    color: rgb(109, 109, 109);
}

.skills {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    color: #d1d1d1;
    font-size: small;
    padding: 1px;
}

.skills p {
    border: 1px solid rgba(255, 255, 255, 0.5);
    padding: 10px;
    padding-top: 3px;
    padding-bottom: 3px;
    border-radius: 999px;
    background: rgba(255, 255, 255, 0.055);
}

.more {
    display: flex;
    flex-wrap: wrap;
    color: rgb(78, 78, 78);
}

.more p {
    padding: 10px;
    padding-top: 1px;
    padding-bottom: 1px;
    font-size: 13px;
}

.contacts {
    padding: 10px;
    gap: 10px;
    display: flex;
}

.contacts a {
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 5px;
    padding: 10px;
    text-decoration: none;
    color: white;
    transition: color 0.2s ease, background 0.2s ease;
}

.contacts a:hover {
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 5px;
    padding: 10px;
    text-decoration: none;
    color: rgb(0, 0, 0);
    background: white;
}

